# scoutnet2google

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  scoutnet2google.ini.example  scoutnet2google.py  scoutnet2google.sh
.github/workflows/: container.yaml  test.yml
scoutnet2google/: __init__.py  client.py  google.py  scoutnet.py
