[tool.poetry]
name = "scoutnet2google"
version = "1.1.0"
description = "Scoutnet Google Workspace integration"
authors = ["Jakob Schlyter <jakob@schlyter.se>"]
license = "BSD-2-Clause"
repository = "https://github.com/jschlyter/scoutnet2google"

[tool.poetry.dependencies]
python = "^3.9"
scoutnet = {git = "https://github.com/jschlyter/python-scoutnet.git", rev = "main"}
google-api-python-client = "^2.61.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.3"

[tool.poetry.dev-dependencies]
pylama = "^7"
black = "^22"
isort = "^5.10"

[tool.poetry.scripts]
scoutnet2google = "scoutnet2google:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
