[tool.poetry]
name = "scoutnet2google"
version = "1.1.0"
description = "Scoutnet Google Workspace integration"
authors = ["Jakob Schlyter <jakob@schlyter.se>"]
license = "BSD-2-Clause"
repository = "https://github.com/jschlyter/scoutnet2google"

[tool.poetry.dependencies]
python = "^3.11"
scoutnet = {git = "https://github.com/jschlyter/python-scoutnet.git", rev = "main"}
google-api-python-client = ">=2.61.0"
google-auth-httplib2 = ">=0.1.0"
google-auth-oauthlib = ">=0.5.3"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.4.9"

[tool.poetry.scripts]
scoutnet2google = "scoutnet2google:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true
strict_optional = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001", "SIM102"]
exclude = ["examples/*"]

[tool.ruff.lint.isort]
combine-as-imports = true
