[project]
name = "scoutnet2google"
dynamic = ["version"]
description = "Scoutnet Google Workspace integration"
authors = [{name="Jakob Schlyter", email = "jakob@schlyter.se"}]
license = "BSD-2-Clause"
requires-python = ">=3.13,<4.0"
dependencies = [
    "google-api-python-client>=2.177.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "scoutnet",
]

[tool.uv.sources]
scoutnet = {git = "https://github.com/jschlyter/python-scoutnet.git", branch = "main" }

[project.urls]
repository = "https://github.com/jschlyter/scoutnet2google"

[project.scripts]
scoutnet2google = "scoutnet2google:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true
strict_optional = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001", "SIM102"]
exclude = ["examples/*"]

[tool.ruff.lint.isort]
combine-as-imports = true
